# frida-blocker

./: .gitignore  CLAUDE.md  README.md  RELEASING.md  USAGE.md  build.gradle  gradle.properties  publish-to-central.sh  settings.gradle
.github/workflows/: ci.yml  publish.yml
app/: build.gradle
app/src/androidTest/java/ca/weblite/fridablocker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  frida_detector.cpp  frida_detector.h  jni_bridge.cpp
app/src/main/java/ca/weblite/fridablocker/: DetectionResult.java  FridaDetector.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ca/weblite/fridablocker/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
